--- a/start_olimp/1/index.html
+++ b/start_olimp/1/index.html
@@ -55,8 +55,8 @@ function but(id,num) {
 </script>
 <title>ОЛИМПИАДА</title>
 
-<a href="олимпада.png">СКАЧАТЬ БЛАНК 1</a>
-<a href="олимпиада2.png">СКАЧАТЬ БЛАНК 2</a>
+<a href="олимпиада часть 1.png">СКАЧАТЬ БЛАНК 1</a>
+<a href="олимпиада часть 2.png">СКАЧАТЬ БЛАНК 2</a>
 <a>(png)</a>
 
 <a href="https://mail.ru/">отправьте черновики и чистовики scaner or telephone</a>
