--- a/start_olimp/1/index.html
+++ b/start_olimp/1/index.html
@@ -59,5 +59,5 @@ function but(id,num) {
 <a href="олимпиада часть 2.png">СКАЧАТЬ БЛАНК 2</a>
 <a>(png)</a>
 
-<a href="https://mail.ru/">отправьте черновики и чистовики scaner or telephone</a>
+<a href="https://mail.ru/">testmy105@mail.ru отправьте черновики и чистовики scaner or telephone</a>
 
