--- a/start_olimp/1/index.html
+++ b/start_olimp/1/index.html
@@ -60,4 +60,4 @@ function but(id,num) {
 <a>(png)</a>
 
 <a href="https://mail.ru/">testmy105@mail.ru отправьте черновики и чистовики scaner or telephone</a>
-
+<a href='https://web.whatsapp.com/'>или через whatsapp</a>
