--- a/reg/index.html
+++ b/reg/index.html
@@ -40,5 +40,5 @@ function but(id) {
 <h2><font color="red">ПРАВИЛА!!!</font></h2>
 <h3>НЕЛЬЗЯ ПОЛЬЗЫВАТЬСЯ ИНТЕРНЕТОМ И КАЛЬКУЛЯТОРОМ ВО ВРЕМЯ ОЛИМПИАДЫ!!!</h3>
 <h3>ПРИ ЗАПУСКЕ СРАЗУ ОТПРАВЛЯТЬПОЛНЫЙ СНИМОК ЭКРАНА как это сделать? узнайте на главной</h3>
-
+все вопросы на whatsapp или по почте testmy105@mail.ru
 </center>
