--- a/reg/index.html
+++ b/reg/index.html
@@ -30,6 +30,7 @@ function but(id) {
 
 </script>
 <center>
+ олимпиада не доступно ждите
 <h3><font color="red">ВНИМАНИЕ ПИШИТЕ НА АНГЛИЙСКОМ (СТЕПАН=STEPAN) </font></h3>
 <h5>ВВЕДИТЕ ФАМИЛИЯ ИМЯ (SHARTDINOV STEPAN)</h5>
 <input id='1'>
