--- a/start_olimp/1/index.html
+++ b/start_olimp/1/index.html
@@ -49,15 +49,15 @@ function but(id,num) {
         document.location.href='/home/3'
 
     }
-    
+   
 }
 
 </script>
 <title>ОЛИМПИАДА</title>
 
-<a href="олимпиада часть 1.png">СКАЧАТЬ БЛАНК 1</a>
-<a href="олимпиада часть 2.png">СКАЧАТЬ БЛАНК 2</a>
+<a href="олимпиада часть 1.png",target="_blank">СКАЧАТЬ БЛАНК 1</a>
+<a href="олимпиада часть 2.png",target="_blank">СКАЧАТЬ БЛАНК 2</a>
 <a>(png)</a>
 
-<a href="https://mail.ru/">testmy105@mail.ru отправьте черновики и чистовики scaner or telephone</a>
-<a href='https://web.whatsapp.com/'>или через whatsapp</a>
+<a href="https://mail.ru/">отправьте черновики и чистовики scaner or telephone</a>
+
