--- a/result/stage1/index.html
+++ b/result/stage1/index.html
@@ -1,1 +1,33 @@
-ПОКА НЕТ РЕЗУЛЬТАТОВ
+<script>
+    function onbut(){
+        text = document.getElementById("code").value
+        document.getElementById("code").style.visibility = "hidden";
+        document.getElementById("but").style.visibility = "hidden";
+        if(text=="563"){
+  document.getElementById("1").innerText='Архип_____'
+        }
+        if(text=="874"){
+  document.getElementById("2").innerText='Алина_____'
+        }
+        if(text=="165"){
+  document.getElementById("3").innerText='Настя_____'
+        }
+        if(text=="358"){
+  document.getElementById("4").innerText='Алевтина__'
+        }
+
+    }
+</script>
+ВВЕДИТЕ ВАШ ТРЁХЗНАЧНЫЙ КОД
+<input id="code">
+<button id="but" onclick="onbut()"></button>
+<br>
+<a id="1">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<br>
+<a id="2">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<br>
+<a id="3">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<br>
+<a id="4">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+
+
