--- a/result/stage1/index.html
+++ b/result/stage1/index.html
@@ -15,12 +15,21 @@
         if(text=="358"){
   document.getElementById("4").innerText='Алевтина__'
         }
+        if(text=="927"){
+  document.getElementById("5").innerText='Алексей___'
+        }
+        if(text=="402"){
+  document.getElementById("6").innerText='Антонина__'
+        }
+        if(text=="215"){
+  document.getElementById("7").innerText='Владимир__'
+        }
 
     }
 </script>
 ВВЕДИТЕ ВАШ ТРЁХЗНАЧНЫЙ КОД
 <input id="code">
-<button id="but" onclick="onbut()"></button>
+<button id="but" onclick="onbut()">ВОЙТИ</button>
 <br>
 <a id="1">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
 <br>
@@ -29,5 +38,10 @@
 <a id="3">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
 <br>
 <a id="4">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
-
+<br>
+<a id="5">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<br>
+<a id="6">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<br>
+<a id="7">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
 
