--- a/result/stage1/index.html
+++ b/result/stage1/index.html
@@ -31,17 +31,17 @@
 <input id="code">
 <button id="but" onclick="onbut()">ВОЙТИ</button>
 <br>
-<a id="1">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<a id="1">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0  сумма 0
 <br>
-<a id="2">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<a id="2">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0  сумма 0
 <br>
-<a id="3">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<a id="3">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0  сумма 0
 <br>
-<a id="4">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<a id="4">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0  сумма 0
 <br>
-<a id="5">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<a id="5">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0  сумма 0
 <br>
-<a id="6">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<a id="6">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0  сумма 0
 <br>
-<a id="7">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0
+<a id="7">__________</a>0   0  0   0   0   0   0   0   0   0   0   0   0   0   0  сумма 0
 
