--- a/result/stage1/index.html
+++ b/result/stage1/index.html
@@ -19,7 +19,7 @@
   document.getElementById("5").innerText='Алексей___'
         }
         if(text=="402"){
-  document.getElementById("6").innerText='Антонина__'
+  document.getElementById("6").innerText='Дядя Вова_'
         }
         if(text=="215"){
   document.getElementById("7").innerText='Владимир__'
